Fixing repeated pixels when drawing HTML5 video to canvas.

When the coded size of the video frame is different from the visible
rect, SkCanvasVideoRenderer::Paint tries to scale the video while it
must ignore the pixels outside visible rect. This is addressed by
clipping the SkImage object created from VideoFrame prior to painting
the frame on the canvas.

BUG=611330

Review-Url: https://codereview.chromium.org/2369093002
Cr-Commit-Position: refs/heads/master@{#423688}

Former-commit-id: feb2e37e78f375218f842448db94eae13254b536